2012-01-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/eval.c (update_plot_bounds):  Store the canvas size used by
	the previous plot in user accessible variables GPVAL_TERM_XSIZE,
	GPVAL_TERM_YSIZE.

2012-01-15  Mojca Miklavec <mojca.miklavec.lists@gmail.com>

	* src/mouse.c (event_buttonpress): Treat mouse buttons 6/7 as
	left/right scroll events (e.g. from fingers on a touchpad).

	* src/qtterminal/QtGnuplotScene.cpp (mouseReleaseEvent):  Pass
	horizontal scroll events through to gnuplot core as mouse events 6/7.

2011-01-15 Bastian Maerkisch  <bmaerkisch@web.de>

	* config/config.mgw: Sync with configure.

2011-01-14  Bastian Maerkisch  <bmaerkisch@web.de>

	Installer for Windows. Japanese translation by Shigeharu Takeno.

	* win/gnuplot.iss win/modpath.iss: Installer script to be compiled by
	Inno Setup. New files.

	* win/Copyright-ja.txt: Japanese translation of Copyright, includes
	original text. Encoding is Shift-JIS.

	* win/README-Windows.txt win/README-Windows-ja.txt: New files, 
	displayed by installer before installation. Based on Tatsuro Matsuoka's
	README.Windows.gpteam and README.

	* config/mingw/Makefile: New make target 'installer'.

	* Makefile.am (EXTRA_DIST): Include win/

2011-01-14  Bastian Maerkisch  <bmaerkisch@web.de>

	* tutorial/linepoin.plt: Avoid deprecated syntax.

	* config/mingw/Makefile config/msvc/Makefile src/plot.c:
	GNUPLOT_SHARE_DIR is relative to gnuplot directory on Windows.
	Extend build support for documentation, include in installer.

2012-01-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/util3d.h src/util3d.c (edge3d_intersect two_edge3d_intersect) 
	src/graph3d.c (plot3d_lines_pm3d):  The utility routines in util3d
	assumed that a 3D curve is always traversed in ascending order of the
	constituent points.  But plot3d_lines_pm3d scans in both directions,
	leading to incorrect clipping and possible array over-run when the
	utility routines were called.  Furthermore, the arrays holding the